...
                                .padding(.all, 12)
                                .background(RoundedRectangle(cornerRadius: 10).stroke())
                        }
                        .background(RoundedRectangle(cornerRadius: 10).stroke(Color.red))
                    }

                    Text("end")
                }
            }

        case .longHStack:
            ScrollView {
                VStack {
...
